--- a/sass/layout/_layout-wide.scss
+++ b/sass/layout/_layout-wide.scss
@@ -30,5 +30,13 @@
                 }
             }
         }
-    }    
+    }
+
+    @include bp( 800 ) {
+        &.user-dashboard .banner {
+            width: -webkit-calc(100% + #{$size__margin-triple * 2}px);
+            width: -moz-calc(100% + #{$size__margin-triple * 2}px);
+            width: calc(100% + #{$size__margin-triple * 2}px);
+        }
+    }
 }
